Change DB scheme for areas and places; Update function to set random places If lng, lat diff under 0.01, recognize as a place in that area
