# serverless-backend/app/shawn-insert-places.js
@@ -1,0 +1,307 @@
+const all_locations =  {
+  "type": "FeatureCollection",
+  "features": [
+    {
+      "geometry": {
+        "coordinates": [139.7849047, 35.6996298],
+        "type": "Point"
+      },
+      "properties": {
+        "area":"浅草",
+        "Google Maps URL": "http://maps.google.com/?cid=16325139695315152822",
+        "Location": {
+          "Address": "2 Chome-15-3 Asakusabashi, Taito City, Tokyo 111-0053, Japan",
+          "Business Name": "Fili",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6996298",
+            "Longitude": "139.7849047"
+          }
+        },
+        "Published": "2021-12-16T13:29:17Z",
+        "Title": "Fili",
+        "Updated": "2021-12-16T13:29:17Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7381256, 35.6732074],
+        "type": "Point"
+      },
+      "properties": {
+        "area":"赤坂",
+        "Google Maps URL": "http://maps.google.com/?cid=8950467726064582308",
+        "Location": {
+          "Address": "3 Chome-12-11 Akasaka, Minato City, Tokyo 107-0052, Japan",
+          "Business Name": "Sanshō Kōfuku (Sānshāngqiǎofú) Akasaka",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6732074",
+            "Longitude": "139.7381256"
+          }
+        },
+        "Published": "2021-12-04T02:50:03Z",
+        "Title": "Sanshō Kōfuku (Sānshāngqiǎofú) Akasaka",
+        "Updated": "2021-12-04T02:50:03Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7778334, 35.6588847],
+        "type": "Point"
+      },
+      "properties": {
+        "area":"月島",
+        "Google Maps URL": "http://maps.google.com/?cid=3549160543308174880",
+        "Location": {
+          "Address": "Japan, 〒104-0054 Tokyo, Chuo City, Kachidoki, 2 Chome−10−4 宮野海運ビル",
+          "Business Name": "徳寿 本店",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6588847",
+            "Longitude": "139.7778334"
+          }
+        },
+        "Published": "2021-11-20T04:42:32Z",
+        "Title": "徳寿 本店",
+        "Updated": "2021-11-20T04:42:32Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7366217, 35.6556337],
+        "type": "Point"
+      },
+      "properties": {
+        "area":"麻布",
+        "Google Maps URL": "http://maps.google.com/?cid=6603485424113293728",
+        "Location": {
+          "Address": "Japan, 〒106-0045 Tokyo, Minato City, Azabujuban, 1 Chome−11−10 地下１階 Juubann ANEX",
+          "Business Name": "BLU JAM CAFE Azabu-Juban",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6556337",
+            "Longitude": "139.7366217"
+          }
+        },
+        "Published": "2021-11-14T08:09:13Z",
+        "Title": "BLU JAM CAFE Azabu-Juban",
+        "Updated": "2021-11-14T08:09:13Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7162327, 35.6470788],
+        "type": "Point"
+      },
+      "properties": {
+        "area":"恵比寿",
+        "Google Maps URL": "http://maps.google.com/?cid=17865408903955430013",
+        "Location": {
+          "Address": "Japan, 〒150-0013 Tokyo, Shibuya City, Ebisu, 1 Chome−25−3 レジデンサプリマベェラァ201",
+          "Business Name": "440 Broadway Taco Shop",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6470788",
+            "Longitude": "139.7162327"
+          }
+        },
+        "Published": "2021-11-14T08:08:14Z",
+        "Title": "440 Broadway Taco Shop",
+        "Updated": "2021-11-14T08:08:14Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.6957136, 35.6622045],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=2969291730392274255",
+        "Location": {
+          "area":"渋谷",
+          "Address": "Japan, 〒150-0042 Tokyo, Shibuya City, Udagawacho, 37−10 麻仁ビル",
+          "Business Name": "ØL by Oslo Brewing Co.",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6622045",
+            "Longitude": "139.6957136"
+          }
+        },
+        "Published": "2021-11-14T08:08:05Z",
+        "Title": "ØL by Oslo Brewing Co.",
+        "Updated": "2021-11-14T08:08:05Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7277656, 35.6601562],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=7286219719880127088",
+        "Location": {
+          "Address": "Japan, 〒106-0031 Tokyo, Minato City, Nishiazabu, 3 Chome−2−9 地下１階 サンライズ六本木",
+          "Business Name": "ALDEBARAN",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6601562",
+            "Longitude": "139.7277656"
+          }
+        },
+        "Published": "2021-11-14T08:07:57Z",
+        "Title": "ALDEBARAN",
+        "Updated": "2021-11-14T08:07:57Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7051216, 35.6536724],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=7454850601230559425",
+        "Location": {
+          "Address": "代官山上新ビル 1階, １-3 Sarugakucho, Shibuya City, Tokyo 150-0033, Japan",
+          "Business Name": "PIZZA SLICE",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6536724",
+            "Longitude": "139.7051216"
+          }
+        },
+        "Published": "2021-11-14T08:07:40Z",
+        "Title": "PIZZA SLICE",
+        "Updated": "2021-11-14T08:07:40Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.705599, 35.6703765],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=15327160940307234850",
+        "Location": {
+          "Address": "Japan, 〒150-0001 Tokyo, Shibuya City, Jingumae, 1 Chome−8−24 ＯＺ原宿ビル",
+          "Business Name": "Chiles Mexican Grill Harajuku",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6703765",
+            "Longitude": "139.7055990"
+          }
+        },
+        "Published": "2021-11-14T07:55:24Z",
+        "Title": "Chiles Mexican Grill Harajuku",
+        "Updated": "2021-11-14T07:55:24Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7050526, 35.6664156],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=11823685539488960543",
+        "Location": {
+          "Address": "6 Chome-13-6 Jingumae, Tokyo 150-0001, Japan",
+          "Business Name": "Good Town Doughnuts and Coffee",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6664156",
+            "Longitude": "139.7050526"
+          }
+        },
+        "Published": "2021-11-14T07:55:16Z",
+        "Title": "Good Town Doughnuts and Coffee",
+        "Updated": "2021-11-14T07:55:16Z"
+      },
+      "type": "Feature"
+    },
+    {
+      "geometry": {
+        "coordinates": [139.7072295, 35.6606949],
+        "type": "Point"
+      },
+      "properties": {
+        "Google Maps URL": "http://maps.google.com/?cid=14121839727480384781",
+        "Location": {
+          "Address": "2 Chome-9-9 Shibuya, Shibuya City, Tokyo 150-0002, Japan",
+          "Business Name": "Malay Asian Cuisine Shibuya Shop",
+          "Country Code": "JP",
+          "Geo Coordinates": {
+            "Latitude": "35.6606949",
+            "Longitude": "139.7072295"
+          }
+        },
+        "Published": "2021-11-14T07:30:41Z",
+        "Title": "Malay Asian Cuisine Shibuya Shop",
+        "Updated": "2021-11-14T07:30:41Z"
+      },
+      "type": "Feature"
+    }
+  ]
+}
+
+//1. Format into json
+var statement = {
+  "shawn_places": []
+};
+
+all_locations.features.forEach(
+  (location) =>
+    statement.shawn_places.push(
+      {
+        "PutRequest": {
+          "Item": {
+                "place_name": {
+                  "S": location['properties']['Title']
+                },
+                "google_maps_url": {
+                  "S": location['properties']['Google Maps URL']
+                },
+                "latitude": {
+                  "S": location['properties']['Location']["Geo Coordinates"]["Latitude"]
+                },
+                "longitude": {
+                  "S": location['properties']['Location']["Geo Coordinates"]["Longitude"]
+                }
+              }
+        }
+      }
+    )
+);
+
+console.log(statement);
+//2. Call batchwriteitemAPI
+//Save json into shawn_places.json
+//aws dynamodb batch-write-item --request-items file://shawn_places.json
+
+
+//3. Let get locations API successfully retrieve locations
+//4. Take that response, calculate area. Use 2*O(n) +- lng/lat coordinates for now.
+// And show all the places in your list
+
+insertAreaStatement = {
+  "uuid": {
+    "S": "9"
+  },
+  "area_name": {
+    "S": "六本木"
+  },
+  "latitude": {
+    "S": "35.6633557"
+  },
+  "longitude": {
+    "S": "139.7207739"
+  }
+}
