# src/app/models/area.ts
@@ -1,4 +1,5 @@
-//todo to be used
-class Area {
-  area_name: string = "";
+export interface Area {
+  area_name: string;
+  longitude: number;
+  latitude: number;
 }
