# src/app/models/place.ts
@@ -1,5 +1,6 @@
 export interface Place {
   place_name: string;
   google_maps_url: string;
-  area: string;
+  longitude: number;
+  latitude: number;
 }
